# NewQC

./: .gitignore  settings.gradle
app/: build.gradle
app/libs/: openxr_loader_for_android-1.1.43.aar
app/src/androidTest/java/git/artdeell/newqc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: light_texture.ktx  tv.x
app/src/main/cpp/: CMakeLists.txt  asset_buffer_read.c  asset_buffer_read.h  gl_safepoint.h  gles_init.c  gles_init.h  gles_shader.c  gles_shader.h  ktx_texture.c  ktx_texture.h  lightmap_model_gles_program.c  lightmap_model_gles_program.h  log.h  main.c  multiview_detect.c  multiview_detect.h  renderer.c  renderer.h  rendertarget_blit_program.c  rendertarget_blit_program.h  singlecolor_program.c  singlecolor_program.h  xr_include.h  xr_init.c  xr_init.h  xr_input.c  xr_input.h  xr_linear_algebra.h  xr_render.c  xr_render.h
app/src/main/java/git/artdeell/newqc/: MainActivity.java  NativeSurface.java
app/src/main/res/values/: strings.xml
app/src/test/java/git/artdeell/newqc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
